--- a/documentary/2018/9/6.md
+++ b/documentary/2018/9/6.md
@@ -1,45 +1,8 @@
-# daily-log
-
-[![npm version](https://badge.fury.io/js/daily-log.svg)](https://npmjs.org/package/daily-log)
-
-`daily-log` is a collection of descriptions of work done each day.
-
-![terminal](images/terminal.svg)
-
-## Table Of Contents
-
-- [Table Of Contents](#table-of-contents)
-- [September](#september)
-  * [5 Wednesday](#5-wednesday)
-  * [6 Thursday](#6-thursday)
-- [API](#api)
-  * [`dailyLog(arg1: string, arg2?: boolean)`](#dailylogarg1-stringarg2-boolean-void)
-- [TODO](#todo)
-- [Copyright](#copyright)
-
-# 2018
-
-
-
-## September
-
-### 5 Wednesday
-
-Working on hiding error stack for the `restream` and starting to implement it in the `erotic`. Figuring out that Node.js [hides an async stack](https://github.com/nodejs/node/issues/11865) behind `<anonymous>`, but only if error was thrown after the first `await`.
-
-%EXAMPLE example/promise%
-
-- _Documentary_:
- + `v1.14`: refactor TOC, allow h1, detect underlined titles
- + `v1.13`: fork stderr
- + `v1.12`: replace require, start using masks
-- _Restream_:
- + `v3.2`: brake and stack hiding.
-
-
-**Future** Implement remembering the full async stack in `erotic`.
 
 ### 6 Thursday
+
+<!-- wake: 13
+sleep: +1 5 -->
 
 The day started by continuing to find suitable packages to compile w/ `documentary`. [`json2svg`](https://www.npmjs.com/package/json2csv) looked good yesterday, however it had a screenshot of a PNG. Therefore it was decided to be a great feature for _Documentary_ to make screenshots of output from a terminal. The search revealed existence of [`ansi-to-svg`](https://github.com/F1LT3R/ansi-to-svg) which is not very popular, but amazing. To start off with, a [Yosemite UI Kit](https://www.sketchappsources.com/tag/yosemite.html) for Sketch was downloaded and the title bar exported as SVG.
 
@@ -52,34 +15,3 @@ Finished off with a complete good-looking terminal template which could also be 
 ![terminal](images/terminal.svg)
 
 **Future** Integrate the terminal generation into _Documentary_, make animated terminal in addition to static, release as a separate package (`svag`?). Implement caching for _Documentary_.
-
-## API
-
-The package is available by importing its default function:
-
-```js
-import dailyLog from 'daily-log'
-```
-
-### `dailyLog(`<br/>&nbsp;&nbsp;`arg1: string,`<br/>&nbsp;&nbsp;`arg2?: boolean,`<br/>`): void`
-
-Call this function to get the result you want.
-
-```js
-/* yarn example/ */
-import dailyLog from 'daily-log'
-
-(async () => {
-  await dailyLog()
-})()
-```
-
-## TODO
-
-- [ ] Add a new item to the todo list.
-
-## Copyright
-
-(c) [Art Deco][1] 2018
-
-[1]: https://artdeco.bz
