--- a/documentary/2018/9/5.md
+++ b/documentary/2018/9/5.md
@@ -3,7 +3,9 @@
 
 Working on hiding error stack for the `restream` and starting to implement it in the `erotic`. Figuring out that Node.js [hides an async stack](https://github.com/nodejs/node/issues/11865) behind `<anonymous>`, but only if error was thrown after the first `await`.
 
-%EXAMPLE example/promise%
+%EXAMPLE: example/promise.js%
+
+%FORK example/promise%
 
 - _Documentary_:
  + `v1.14`: refactor TOC, allow h1, detect underlined titles
