--- a/documentary/2018/9/6.md
+++ b/documentary/2018/9/6.md
@@ -15,3 +15,5 @@ Finished off with a complete good-looking terminal template which could also be 
 ![terminal](images/terminal.svg)
 
 **Future** Integrate the terminal generation into _Documentary_, make animated terminal in addition to static, release as a separate package (`svag`?). Implement caching for _Documentary_.
+
+1. Timer: 8.38 + (5.3) = _13 hours 41 min_
