add window & fork properly

--- a/documentary/2018/9/7.md
+++ b/documentary/2018/9/7.md
@@ -4,7 +4,9 @@
 <!-- wake: 16
 sleep: +1 7.30 -->
 
-Viva la [`SVaG`](https://svag.io)! As continuation from yesterday's work on making a terminal SVG, I started the day by figuring out that the best course of action would be to create a package which would export multiple UI elements as SVGs. The elements can be dynamically generated, therefore a whole library was written. In the beginning, I just worked on the `svag` package and was putting lib methods and UI elements such as `terminal` in there, but quickly changed to registering a new organisation on `npm` [`svag`](https://www.npmjs.com/org/svag) and on GitHub, and used `mnp` to spawn packages.
+Viva la [`SVaG`](https://svag.co)! As continuation from yesterday's work on making a terminal SVG, I started the day by figuring out that the best course of action would be to create a package which would export multiple UI elements as SVGs. The elements can be dynamically generated, therefore a whole library was written. In the beginning, I just worked on the `svag` package and was putting lib methods and UI elements such as `terminal` in there, but quickly changed to registering a new organisation on `npm` [`svag`](https://www.npmjs.com/org/svag) and on GitHub, and used `mnp` to spawn packages.
+
+<img alt="corners" src="https://raw.github.com/artdecocode/daily-log/master/images/window.svg?sanitize=true">
 
 The GitHub org name `svag` was taken, and the request to free it due to inactivity was denied as there was some private activity. I also got a 2-month old response saying that `artdeco` org is also not inactive, but I could try the trademark claim. Therefore, the org `svagjs` was registered although I'm not a big fan of adding `js` at the end because it's so easy, unless it's something like `mnpjs` because npm also uses `npmjs.com` and `mnp` is a play on `npm`.
 
@@ -28,7 +30,7 @@ Then I focused the efforts on implementing the library with some methods such as
 
 %EXAMPLE: example/svag.js%
 
-%FORK: example example/svag.js%
+%FORK-svg example example/svag.js%
 
 Trying to use `I` in the log, although it does sound more personal, but I'm not gonna write `we` because it's too formal.
 
