--- a/documentary/2018/9/25-26.md
+++ b/documentary/2018/9/25-26.md
@@ -1,6 +1,16 @@
-### 25-26 Tuesday-Wednesday: `rqt` + `namecheap-web`
+### 25-26 Tuesday-Wednesday (rqt w/ namecheap)
 
-Both days was work on the `@rqt/aqt`, `@rqt/rqt` and `@rqt/namecheap-web` packages. The request library is finished, and now used in the web API for _Namecheap_. It can authenticate and white-list IP addresses. Most of the logic was taken out of `expensive` but somewhat refactored and tests added. The next part is to implement the actual API and place it in `expensive`.
+![open vpn on windows](images/18/9-25/compress.png)
+
+Both days was work on the `@rqt/aqt`, `@rqt/rqt` and `@rqt/namecheap-web` packages. The request library has now been implemented with compression by default, tested with _IdioCore_ and documented more fully, and now used in the web API for _Namecheap_ as planned. The latter can authenticate and white-list IP addresses. Most of the logic was taken out of `expensive` but somewhat refactored and tests added. The next part is to implement the actual API and place it in `expensive`.
+
+The advantage of having a namecheap API separate from _Expensive_ is that it is more easily maintainable, can be tested and documented separately, and reduces the code complexity of both packages. It becomes much more relaxed to make changes related to the API access in the `namecheap-web` package without having to worry about breaking the whole _Expensive_ client. Moreover, now when the compression is implemented in `rqt` (which was the whole purpose of refactoring it into `@rqt/aqt` as well), the amount of transmitted data is much lower (e.g., `15697 B` compressed VS `43434 B` raw).
+
+![namecheap-web CLI](images/18/9-25/namecheap-web.gif)
+
+The compression became important when I used to have internet with a 3G/4G sim card, and had a dynamic IP. These two things really have pushed me to implement white-list of the IP addressed via the web interface and thus features necessary to reduce the data load (a web page can be large). Having limited data was one of the best things happened in summer: it helped to see assumed perceived constants (free fast internet), and then kick of the improvements to the whole spectrum of software, including other packages as well (`expensive` needed `rqt` for compression, `rqt` was dependent on `idio` for testing of compression, `idio` required `documentary` for documentation of middleware using types and documentary made `alamode` possible).
+
+%~ width="15"%
 
 Part of Tuesday was fighting the bug in the _VS Code_ when automatic type acquisition stopped working for no reason. It lead to installing types locally, such as `@types/koa-router` which repaired it, however it should not be like that -- if there is a feature for automatic installation of types in the background, it should be available. This is because _VS Code_ is the environment chosen for development, and is essentially a part of the _Art Deco Package_. For example, there is no need to install `eslint` to check code style, because it can be installed globally. Additionally, packages rely on the `@type {import('package).Type} Type` feature, which is presumably only available in the _VS Code_, therefore it's the chosen instrument to write code. It'd be a good thing to check what happens in other editors.
 
@@ -22,7 +32,7 @@ Wednesday was also spent on setting up VPN on a free tiered MS Server. After a f
 
 It's also becoming more fun to program with the request library and the web server. For the last half a year, I was building the tools that I need to write software according to my standard of quality, and now they successfully work. Developing web-servers and integrations with APIs is a lot of fun because it involves other 3rd party tools and more information is entering the object-environment (sic) field. I can't wait to realise all my and my friends' ideas for websites with the _Idio_ web server. The next big part for it is to write the authentication package, which would connect to the database, allow registration and logging in, with email and text message confirmations. After this is done, it can be reused in any website with just simple installation. And the good thing is, it is very easy to implement. The idea of `@idio` is to create a package for each essential feature, and build a web server for any website in such an easy manner as similar to cooking: just add all ingredients together, perform a little bit of magic for cooking, and get a healthy hearty meal.
 
-![open vpn on windows](images/18/win.png)
+![open vpn on windows](images/18/9-25/win.png)
 
 %~ width="15"%
 
