--- a/documentary/2018/9/25-26.md
+++ b/documentary/2018/9/25-26.md
@@ -36,6 +36,6 @@ It's also becoming more fun to program with the request library and the web serv
 
 %~ width="15"%
 
-I wanted to write a book, _Art Deco Node.js_ with all up-to-date practices for developing a modern package, including how to use scopes, implement, test, document and maintain packages. It would take time but I could really shed some light into how I successfully approach the development process including what things are important (first and foremost, developer experience) and how to organise the routine of making Node.js software. The happy world for me would be where I just had my Tier 1 talent visa and didn't have to worry about finding other ways, without the horrible people who don't understand anything about Node saying rude things about me. It's really hard to forgive and I don't think I can. It's great to think about more eternal things but when it gets cold and grey it becomes more about survival and hence less romantic and more real. I so badly wish they pay dearly for what things they have said. The plan is to finish with _NodeTools_ so that I can get some real experts on my side who'll confirm my true skill level.
+I wanted to write a book, _Art Deco Node.js_ with all up-to-date practices for developing a modern package, including how to use scopes, implement, test, document and maintain packages. It would take time but I could really shed some light into how I successfully approach the development process including what things are important (first and foremost, developer experience) and how to organise the routine of making Node.js software. The happy world for me would be where I just had my Tier 1 talent visa and didn't have to worry about finding other ways, without the horrible people who don't understand anything about Node criticizing my work without having ever created anything themselves. They are so miserable because of incapacity to really know what they are seeing and arrogantly failing to grasp the true meaning of what's going on. It's really hard to forgive and I don't think I can. It's great to think about more eternal things but when it gets cold and grey it becomes more about survival and hence less romantic and more real. I so badly wish they pay dearly for what things they have said. The plan is to finish with _NodeTools_ so that I can get some real experts on my side who'll confirm my true skill level.
 
 - [ ] Check how types for packages work (or don't work) in other editors.
