--- a/documentary/2018/9/25-26.md
+++ b/documentary/2018/9/25-26.md
@@ -17,7 +17,7 @@ Part of Tuesday was fighting the bug in the _VS Code_ when automatic type acquis
 On the other hand, it was good to once again acknowledge that even if a package's autocompletion works in its project directory, it does not mean it will work when published and installed from other packages.
 
 <details>
-<summary>There can be bugs in _VS Code_ which are so subtle that the suggestions can work when a certain file is open, but stop when it is closed, or rather the other way around.</summary>
+<summary>There can be bugs in <em>VS Code</em> which are so subtle that the suggestions can work when a certain file is open, but stop when it is closed, or rather the other way around.</summary>
 
 ![proxied bug](https://user-images.githubusercontent.com/2932786/46033978-6111c180-c0b4-11e8-968c-d6a54b816eba.gif)
 </details><br/>
