--- a/documentary/2018/9/25-26.md
+++ b/documentary/2018/9/25-26.md
@@ -1,6 +1,10 @@
 ### 25-26 Tuesday-Wednesday (rqt w/ namecheap)
 
-![open vpn on windows](images/18/9-25/compress.png)
+```table
+[
+  ["![open vpn on windows](images/18/9-25/compress2.png)"]
+]
+```
 
 Both days was work on the `@rqt/aqt`, `@rqt/rqt` and `@rqt/namecheap-web` packages. The request library has now been implemented with compression by default, tested with _IdioCore_ and documented more fully, and now used in the web API for _Namecheap_ as planned. The latter can authenticate and white-list IP addresses. Most of the logic was taken out of `expensive` but somewhat refactored and tests added. The next part is to implement the actual API and place it in `expensive`.
 
